# roboticHand

src/: bash.sh  docs.md
src/bcr_arm/bcr_arm_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  ros2_control.urdf.xacro
src/bcr_arm/bcr_arm_description/urdf/mech/: bcr_arm_mech.urdf.xacro
src/bcr_arm/bcr_arm_description/urdf/robots/: bcr_arm.urdf.xacro
src/bcr_arm/bcr_arm_gazebo/: CMakeLists.txt  package.xml
src/bcr_arm/bcr_arm_gazebo/config/: ros2_controllers.yaml
src/bcr_arm/bcr_arm_gazebo/launch/: bcr_arm.gazebo.launch.py
src/bcr_arm/bcr_arm_gazebo/scripts/: forward_kinematics.py
