<?xml version="1.0"?>
<package format="3">
  <name>bcr_arm_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for BCR Arm</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>bcr_arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
